# oso

./: .env  .gitignore  .gitmodules  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  VERSION  build_musl.sh  coaster.json  example.py  final.sql  foo.js  foo.py  go.mod  go.sum  netlify.toml  package.json  package.sh  release_build.sh  roles.sql  test.py  test_musl.sh  thread_test.py
.github/: pull_request_template.md
compat_testing/: oso-0.0.3-py3-none-any.whl  oso-0.0.4-py3-none-any.whl
docs/: .env.sample  .gitignore  INSTALL.md  Makefile  README.md  auth-fundamentals.rst  conf.py  config.toml  contents.rst  download.rst  faq.rst  get-fontawesome.sh  get-started.rst  getting-started.rst  idioms.rst  index.rst  integration-guide.rst  learn-queries.polar  mvall  newsletter.rst  oso-overview.rst  performance.rst  polar.rst  requirements-docs-test.txt  requirements-docs.txt  run_doc_tests.py  spelling_allowed_words.txt  versions.json  why-oso.rst
docs/examples/quickstart/rust/: Cargo.toml  Rocket.toml  expenses.polar
docs/examples/quickstart/rust/src/: expenses.rs  main.rs  server.rs
examples/: README.md
languages/: README.md
languages/rust/: Cargo.toml  Makefile
languages/rust/oso/: Cargo.toml  Makefile  test.polar
languages/rust/oso-derive/: Cargo.toml
languages/rust/oso-derive/src/: compile.rs  lib.rs
languages/rust/oso/benches/: bench.rs  blog.rs
languages/rust/oso/examples/: blog.rs  hackathon.rs  lib_guide.rs  test.polar
languages/rust/oso/src/: builtins.rs  diesel.rs  errors.rs  extras.rs  lib.rs  macros.rs  oso.rs  query.rs  repl.rs
languages/rust/oso/src/host/: class.rs  class_method.rs  from_polar.rs  method.rs  mod.rs  to_polar.rs  value.rs
languages/rust/oso/tests/: invalid_roles.polar  parity.rs  test_errors.rs  test_oso.polar  test_oso.rs  test_polar.rs  test_polar_roles.rs  test_polar_rust.rs  test_resource_blocks.rs  test_subclass.rs
languages/rust/oso/tests/common/: mod.rs
languages/rust/procosious/: Cargo.toml
languages/rust/procosious/src/: compile.rs  lib.rs
languages/rust/src/: errors.rs  host.rs  lib.rs  main.rs  methods.rs  oso.rs  polar.rs  query.rs  repl.rs
languages/rust/src/class/: builtins.rs  method.rs  mod.rs
languages/rust/src/host/: builtins.rs  class.rs  class_method.rs  from_polar.rs  method.rs  mod.rs  to_polar.rs
languages/rust/src/host/class/: builtins.rs  method.rs  mod.rs
languages/rust/tests/: parity.rs  test_polar.py  test_polar.rs
languages/rust/tests/parity/: test_api.py
languages/rust/tests/parity/policies/: people.pol  test_api.polar
new-docs/: .gitignore  Makefile  README.md  config.toml  get-fontawesome.sh
oso-lib-0.3.0/: libpolar.dylib
polar/: Cargo.toml  build.rs  cbindgen.toml
polar-analyzer/: Cargo.toml  Makefile
polar-analyzer/src/: database.rs  lib.rs
polar-analyzer/src/diagnostics/: errors.rs  missing_rules.rs  mod.rs  unused_rules.rs
polar-analyzer/src/inspect/: mod.rs  rules.rs  terms.rs
polar-analyzer/src/server/: completion.rs  config.rs  cross_language.rs  documents.rs  hover.rs  mod.rs  symbols.rs
polar-c-api/: Cargo.toml  build.rs  cbindgen.toml
polar-c-api/src/: lib.rs
polar-cli/: Cargo.toml
polar-cli/src/: cli.rs  main.rs  repl.rs  tui.rs
polar-core/: Cargo.toml  build.rs
polar-core/benches/: README.md  bench.rs  bench_main.rs  roles_policy.polar
polar-core/benches/benchmarks/: mod.rs  partial.rs  queries.rs  roles_policy.polar  runner.rs
polar-core/docs/: 001-overview.md  002-concepts.md  003-implementation.md
polar-core/src/: allocator.rs  async_vm.rs  bindings.rs  bnf.rs  constants.rs  counter.rs  data_filtering.rs  debugger.rs  diagnostic.rs  error.rs  events.rs  filter.rs  folder.rs  formatting.rs  inverter.rs  kb.rs  lexer.rs  lib.rs  macros.rs  messages.rs  monad.rs  normalize.rs  numerics.rs  parser.rs  partial.rs  polar.lalrpop  polar.rs  query.rs  resource_block.rs  rewrites.rs  roles.polar  roles_validation.rs  rules.rs  runnable.rs  sources.rs  sugar.rs  terms.rs  traces.rs  types.rs  validate.rs  (+7 more)
polar-core/src/cli/: mod.rs  repl.rs  tui.rs
polar-core/src/diagnostic/: context.rs  mod.rs
polar-core/src/parser/: mod.rs  polar.lalrpop  polar.rs
polar-core/src/partial/: alias.rs  constraints.rs  isa_constraint_check.rs  mod.rs  partial.rs  simplify.rs
polar-core/src/query/: bindings.rs  mod.rs
polar-core/src/runtime/: executor.rs  mod.rs
polar-core/src/traces_v2/: mod.rs
polar-core/tests/: integration_tests.rs  mock_externals.rs  serialize.rs
polar-crossgen/: Cargo.toml  polar_types.go  polar_types.py  polar_types2.go  polar_types_test.py
polar-crossgen/serde_json/: __init__.py
polar-crossgen/serde_types/: __init__.py  test_serde_types.py
polar-crossgen/src/: codegen.rs  go.rs  main.rs  python.rs
polar-crossgen/templates/go/: de_map.hbs  de_opt.hbs  de_primitive.hbs  de_typed.hbs  de_vec.hbs  enum.hbs  enum_variant.hbs  newtype.hbs  preamble.hbs  struct.hbs  tuple.hbs  unit_variant.hbs
polar-crossgen/templates/python/: enum.hbs  enum_variant.hbs  newtype.hbs  preamble.hbs  struct.hbs  unit_variant.hbs
polar-formatter/: Cargo.toml  Makefile
polar-formatter/examples/: advanced.polar  arrays.polar  basic_with_comments.polar  calls.polar  dictionaries.polar  main.rs  operators.polar  parameters.polar  resource_blocks.polar
polar-formatter/src/: ast.rs  lib.rs  main.rs  parser.rs  polar.lalrpop  pretty_print.rs
polar-language-server/: Cargo.toml  Makefile
polar-language-server/src/: helpers.rs  lib.rs
polar-lsp-server/: Cargo.toml
polar-wasm-api/: Cargo.toml  Makefile
polar-wasm-api/src/: errors.rs  lib.rs  polar.rs  query.rs
polar-wasm-api/tests/: polar.rs  query.rs  wasm.rs
polar/benches/: bench.rs
polar/src/: brainstorm.txt  debugger.rs  error.rs  formatting.rs  lexer.rs  lib.rs  macros.rs  main.rs  numerics.rs  parser.rs  parser_pop.rs  polar.lalrpop  polar.rs  rewrites.rs  types.rs  vm.rs
polar/src/cli/: mod.rs  repl.rs  tui.rs
polar/tests/: integration_tests.rs  mock_externals.rs  proptests.proptest-regressions  proptests.rs
(+2130 files in other folders)
