[workspace]

members = [
    "polar-analyzer",
    "polar-core",
    "polar-c-api",
    "polar-wasm-api",
    "languages/rust/oso",
    "languages/rust/oso-derive",
]

exclude = [
    "docs/examples/quickstart/rust"
]

[profile.release]
# Set this to true if you need to debug release builds
debug = false

[profile.bench]
debug = true
