[package]
name = "polar-analyzer"
version = "0.0.1"
authors = ["Oso Security, Inc. <support@osohq.com>"]
edition = "2018"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "polar-analyzer"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.42"
indoc = "1.0.3"
lsp-types = "0.89.2"
polar-core = { path = "../polar-core", version = "0.20.0-beta" }
serde = { version = "1.0.119", features = ["derive", "rc"] }
serde_json = "1.0.66"
serde_path_to_error = "0.1.4"
tokio = { version = "1.10.0", features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tower-lsp = { path = "../../../samscott89/tower-lsp" }
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.19", features = ["fmt"] }
xflags = "0.2.3"

[features]
default = []
