[package]
name = "polar-c-api"
version = "0.22.0"
authors = ["Oso Security, Inc. <support@osohq.com>"]
edition = "2018"

[lib]
name = "polar"
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[dependencies]
polar-core = { path = "../polar-core", version = "=0.22.0" }
serde_json = "1.0.61"

[build_dependencies]
cbindgen = { version = "0.20.0", default-features = false }

[features]
default = []
