[package]
name = "polar-c-api"
version = "0.26.4"
authors = ["Oso Security, Inc. <support@osohq.com>"]
edition = "2021"

[lib]
name = "polar"
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[dependencies]
polar-core = { path = "../polar-core", version = "=0.26.4" }
serde = "1.0"
serde_json = "1.0.61"

[build_dependencies]
cbindgen = { version = "0.24.0", default-features = false }

[features]
default = []
