[package]
name = "polar-cli"
version = "0.1.0"
authors = ["Sam Scott <sam@osohq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17"
polar = { path = "../polar" }
rustyline = "6.1.2"
rustyline-derive = "0.3.1"
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
tui = { version = "0.9", default-features = false, features = ['crossterm'] }
anyhow = "1.0.31"

[features]
default = ["tui_"]
repl = []
tui_ = []
