[package]
name = "polar-core"
description = "Polar core library for oso, an open source policy engine for authorization that’s embedded in your application"
authors = ["Oso Security, Inc. <support@osohq.com>"]
license = "Apache-2.0"
homepage = "https://github.com/osohq/oso"
readme = "README.md"

version = "0.21.0"

edition = "2018"

[lib]
bench = false

[[bench]]
name = "bench_main"
harness = false

[dependencies]
lalrpop-util = "0.19.4"
regex = "1.4.3"
serde = { version = "1.0.119", features = ["derive", "rc"] }
serde_json = "1.0.61"

[build_dependencies]
serde_derive = "1.0"
lalrpop = "0.19.1"

[dev-dependencies]
criterion = "0.3.3"
permute = "0.1.0"
pipe = "0.4.0"
proptest = "0.10.1"
pretty_assertions = "0.6.1"
maplit = "1.0.2"
indoc = "1.0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.46"
wasm-bindgen = "0.2.69"

[features]
default = []
