[package]
name = "polar-core"
description = "Polar core library for oso, an open source policy engine for authorization that’s embedded in your application"
authors = ["Oso Security, Inc. <support@osohq.com>"]
license = "Apache-2.0"
repository = "https://github.com/osohq/oso"
homepage = "https://www.osohq.com/"
readme = "README.md"

version = "0.27.0"

edition = "2021"

[lib]
bench = false

[[bench]]
name = "bench_main"
harness = false

[dependencies]
lalrpop-util = { version = "0.19.9", default-features = false }
serde = { version = "1.0.119", features = ["derive", "rc"] }
indoc = "1.0.3"
strum_macros = "0.24.0"

[build-dependencies]
serde_derive = "1.0"
lalrpop = { version = "0.19.9", default-features = false }

[dev-dependencies]
criterion = { version = "0.3.3", default-features = false }
permutohedron = "0.2.4"
pipe = "0.4.0"
pretty_assertions = "1.0.0"
maplit = "1.0.2"
serde_json = "1.0.61"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.46"
wasm-bindgen = "0.2.69"

[features]
default = []
