[package]
name = "polar-crossgen"
version = "0.1.0"
authors = ["Sam Scott <sam@osohq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
polar-core = { path = "../polar-core" }
serde = "1.0.118"
serde-generate = { path = "../../serde-reflection/serde-generate" } # "0.17.0"
serde-reflection = { path = "../../serde-reflection/serde-reflection" } # "0.17.0"
