[package]
name = "polar-crossgen"
version = "0.1.0"
authors = ["Oso Security, Inc. <support@osohq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
handlebars = { version = "3", features = ["dir_source"] }
heck = "0.3.1"
log = "0.4.11"
maplit = "1.0.2"
polar-core = { path = "../polar-core" }
serde = { version = "1.0.118", features = ["derive"] }
serde-reflection = "*"
serde-generate = "*"
serde_json = "1.0.60"
simple-logging = "2.0.2"
