[package]
name = "polar-formatter"
version = "0.24.0"
authors = ["Oso Security, Inc. <support@osohq.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lalrpop-util = { version = "0.19.6", default-features = false }
polar-core = { path = "../polar-core", version = "=0.24.0" }
pretty = "=0.10.0"
wasm-bindgen = "0.2.76"

[build_dependencies]
lalrpop = { version = "0.19.6", default-features = false }
