[package]
name = "polar-language-server"
version = "0.21.0"
authors = ["Oso Security, Inc. <support@osohq.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.53"
lsp-types = "0.90.0"
serde-wasm-bindgen = "0.3.1"
wasm-bindgen = "0.2.76"
