[package]
name = "polar-language-server"
version = "0.26.4"
authors = ["Oso Security, Inc. <support@osohq.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.53"
lsp-types = "0.90.0"
polar-core = { path = "../polar-core", version = "=0.26.4" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3.1"
wasm-bindgen = "0.2.76"

[dev-dependencies]
wasm-bindgen-test = "0.3.26"
