[package]
name = "polar-wasm-api"
version = "0.12.3"
authors = ["Oso Security, Inc. <support@osohq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.46"
polar-core = { path = "../polar-core", version = "0.12.3" }
serde = { version = "1.0.119", features = ["rc"] }
serde_json = "1.0.61"
serde-wasm-bindgen = "0.1.3"
wasm-bindgen = "0.2.69"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[features]
default = []
