[package]
name = "polar"
version = "0.1.0"
authors = ["oso <dev@osohq.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
lalrpop-util = "0.18.1"
regex = "1.3.7"
permute = "0.1.0"
lazy_static = "1.4.0"

[build_dependencies]
cbindgen = "0.14.2"
lalrpop = {version = "0.18.1", features = ["lexer"]}

[dev-dependencies]
proptest = "0.9.6"
pretty_assertions = "0.6.1"
