[package]
name = "polar"
version = "0.1.0"
authors = ["oso <dev@osohq.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "polar"
required-features = ["repl"]

[[bench]]
name = "bench"
harness = false

[dependencies]
anyhow = "1.0.31"
lalrpop-util = "0.18.1"
lazy_static = "1.4.0"
ordered-float = { version = "1.0.2", default-features=false, features=["serde"] }
regex = "1.3.7"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

# REPL dependencies
rustyline = {version = "6.1.2", optional = true}
rustyline-derive = {version = "0.3.1", optional = true}
indexmap = "1.4.0"

[build_dependencies]
cbindgen = "0.14.2"
lalrpop = {version = "0.18.1", features = ["lexer"]}

[dev-dependencies]
criterion = "0.3"
permute = "0.1.0"
proptest = "0.9.6"
pretty_assertions = "0.6.1"
maplit = "1.0.2"

[features]
default = []
repl = ["rustyline", "rustyline-derive"]
