[package]
name = "polar"
version = "0.1.0"
authors = ["oso <dev@osohq.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
anyhow = "1.0.31"
lalrpop-util = "0.18.1"
lazy_static = "1.4.0"
regex = "1.3.7"
serde = { version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"

[build_dependencies]
cbindgen = "0.14.2"
lalrpop = {version = "0.18.1", features = ["lexer"]}

[dev-dependencies]
criterion = "0.3"
permute = "0.1.0"
pipe = "0.3.0"
proptest = "0.9.6"
pretty_assertions = "0.6.1"
maplit = "1.0.2"
indoc = "0.3.5"

[features]
default = []
