[package]
name = "oso"
version = "0.1.0"
authors = ["Sam Scott <sam@osohq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polar-core = { path = "../../polar-core" }
rustyline = {version = "6.2"}
rustyline-derive = {version = "0.3.1"}
anyhow = "1.0.32"
maplit = "1.0.2"
tracing = "0.1.19"
tracing-subscriber ={version = "0.2.11", features = ["fmt"] }
