[package]
name = "oso-derive"
description = "Oso Authorization Library Macros"
authors = ["Oso Security, Inc. <support@osohq.com>"]
license = "Apache-2.0"
homepage = "https://github.com/osohq/oso"

version = "0.7.0"

edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"

[dependencies.syn]
version = "1.0.43"
features = ["full"]
