[package]
name = "oso-derive"
description = "macros for oso, an open source policy engine for authorization that’s embedded in your application"
authors = ["Oso Security, Inc. <support@osohq.com>"]
license = "Apache-2.0"
homepage = "https://github.com/osohq/oso"

version = "0.7.1"

edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"

[dependencies.syn]
version = "1.0.43"
features = ["full"]
