[package]
authors = ["Oso Security, Inc. <support@osohq.com>"]
description = "oso is an open source policy engine for authorization that’s embedded in your application"
homepage = "https://github.com/osohq/oso"
license = "Apache-2.0"
name = "oso"
readme = "README.md"

version = "0.21.0"

edition = "2018"

[lib]
bench = false

[[bench]]
harness = false
name = "bench"

[[bin]]
name = "oso"
path = "src/repl.rs"
required-features = ["cli"]

[[example]]
name = "blog"
path = "examples/blog.rs"
required-features = ["anyhow"]

[dependencies]
impl-trait-for-tuples = "0.2.0"
maplit = "1.0.2"
oso-derive = {path = "../oso-derive", version = "=0.21.0", optional = true}
polar-core = {path = "../../../polar-core", version = "=0.21.0"}
thiserror = "1.0.23"
tracing = {version = "0.1.22", features = ["log"]}
tracing-subscriber = {version = "0.2.15", features = ["fmt"]}

anyhow = {version = "1.0.38", optional = true}
clap = {version = "2.33.3", optional = true}
lazy_static = "1.4.0"
rustyline = {version = "7.1.0", optional = true}
rustyline-derive = {version = "0.4.0", optional = true}

uuid-06 = {package = "uuid", version = "0.6.5", optional = true}
uuid-07 = {package = "uuid", version = ">=0.7.0, <0.9.0", optional = true}

[dev-dependencies]
anyhow = "1.0.38"
criterion = "0.3.3"
oso-derive = {path = "../oso-derive", version = "=0.21.0"}
static_assertions = "1.1.0"
tempfile = "3.2.0"

[features]
cli = ["rustyline", "rustyline-derive", "anyhow", "clap"]
default = ["derive"]
derive = ["oso-derive"]
