[package]
authors = ["Oso Security, Inc. <support@osohq.com>"]
description = "oso is an open source policy engine for authorization that’s embedded in your application"
homepage = "https://github.com/osohq/oso"
license = "Apache-2.0"
name = "oso"
readme = "README.md"

version = "0.26.4"

edition = "2021"

[lib]
bench = false

[[bench]]
harness = false
name = "bench"

[[bin]]
name = "oso"
path = "src/repl.rs"
required-features = ["cli"]

[[example]]
name = "blog"
path = "examples/blog.rs"
required-features = ["anyhow"]

[dependencies]
impl-trait-for-tuples = "0.2.1"
maplit = "1.0.2"
oso-derive = { path = "../oso-derive", version = "=0.26.4", optional = true }
polar-core = { path = "../../../polar-core", version = "=0.26.4" }
thiserror = "1.0.30"
tracing = { version = "0.1.29", features = ["log"] }

anyhow = { version = "1.0.44", optional = true }
clap = { version = "3.1.18", optional = true }
lazy_static = "1.4.0"
rustyline = { version = "9.0.0", optional = true }
rustyline-derive = { version = "0.5.0", optional = true }
tracing-subscriber = { version = "0.3.1", optional = true, default-features = false, features = [
    "fmt",
] }

uuid-06 = { package = "uuid", version = "0.6.5", optional = true }
uuid-07 = { package = "uuid", version = ">=0.7.0, <0.9.0", optional = true }
uuid-10 = { package = "uuid", version = ">=1.0.0, <2.0.0", optional = true }

[dev-dependencies]
anyhow = "1.0.44"
criterion = { version = "0.3.5", default-features = false }
oso-derive = { path = "../oso-derive", version = "=0.26.4" }
static_assertions = "1.1.0"
tempfile = "3.2.0"
tracing-subscriber = { version = "0.3.1", default-features = false, features = [
    "fmt",
] }

[features]
cli = ["rustyline", "rustyline-derive", "anyhow", "clap", "tracing-subscriber"]
default = ["derive"]
derive = ["oso-derive"]
