[package]
name = "rust-quickstart"
version = "0.1.0"
authors = ["steve olsen <dev@steve.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = "0.4.5"
oso = { path = "../../../../languages/rust/oso", features=["derive"] }